2006-12-21  Marcus Brinkmann  <marcus@g10code.de>

	* cms.c (build_enveloped_data_header): Initialize CMS_TREE.
	Release CMS_TREE, and also TMPWRT always, just as IMAGE and ROOT.

	* cert.c (ksba_cert_release): Release CERT->image.
	* ber-decoder.c (release_decoder_state): Release D->image.buf on
	error.

2006-12-20  Marcus Brinkmann  <marcus@g10code.de>

	* reader.c (ksba_reader_release): Release R->u.mem.buffer if type
	is READER_TYPE_MEM.

	* cms.c (ksba_cms_release): Release CMS->signer_info.
	* cms-parser.c (_ksba_cms_parse_signed_data_part_2): On failure,
	release SI.

2006-12-18  Marcus Brinkmann  <marcus@g10code.de>

	* cert.c (ksba_cert_release): Release cert->root and
	cert->asn_tree.
	(ksba_cert_read_der): Release cert->root and cert->asn_tree.
	* ber-decoder.c (_ksba_ber_decoder_decode): Release d->root.
	* asn1-func.c (do_expand_tree): Keep track of created nodes.
	(copy_tree): Likewise.
	(_ksba_asn_insert_copy): Likewise.
	(ksba_asn_tree_dump): Release tree if expanded.
	* asn1-func2.c (ksba_asn_create_tree): Keep track of created
	nodes.
	* asn1-parse.y (new_node): Fix assignment.

2006-11-29  Werner Koch  <wk@g10code.com>

	* ocsp.c (parse_single_response): Fixed skipping of the NULL.

	* cert.c (ksba_cert_get_image): Cast an arg for printf.

2006-10-18  Werner Koch  <wk@g10code.com>

	* cert.c (ksba_cert_get_key_usage): Map GPG_ERR_NO_VALUE to
	GPG_ERR_NO_DATA.  This is required in case no extensions at all
	are available.
	(ksba_cert_get_cert_policies, ksba_cert_get_ext_key_usages) 
	(ksba_cert_get_auth_key_id, get_simple_octet_string_ext): Ditto.

2006-08-31  Werner Koch  <wk@g10code.com>

	* ocsp.h (struct ocsp_extension_s): New.
	* ocsp.c (extract_nonce): Renamed to ..
	(parse_response_extensions): .. this. Extended to save all
	extensions.
	(release_ocsp_extensions): New.
	(ksba_ocsp_release): Release new extension data.
	(ksba_ocsp_parse_response): Reset extesnion data.
	(parse_optional_boolean): New.
	(parse_single_extensions): New.
